# valdrix

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CODEOWNERS  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dashboard  LICENSE  Makefile  README.md  TRADEMARK_POLICY.md  alembic.ini  check_partitions.py  codealike.json  coverage-enterprise-gate.xml  coverage_full.txt  coverage_report.txt  debug_llm_usage.py  debug_llm_usage_fix.py  deep-research-report.md  diagnose_aws.py  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  final_test_report.txt  final_test_report_v2.txt  inspect_httpx.py  jira_put_response.json  koyeb-worker.yaml  koyeb.yaml  list_tables.py  prod.env.template  pyproject.toml  (+6 more)
.github/: CTO_TECHNICAL_REVIEW.md  FINOPS_TECHNICAL_AUDIT.md  PRINCIPAL_ENGINEER_REVIEW.md  SERIES_A_DUE_DILIGENCE_CHECKLIST.md  TECHNICAL_REVIEW_MASTER_SUMMARY.md  pull_request_template.md
app/: main.py
cloudformation/: valdrics-cur-setup.yaml  valdrics-role.yaml  valdrix-cur-setup.yaml  valdrix-role.yaml
dashboard/: LandingHero_legacy.svelte  README.md  app.py  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts  wrangler.toml
data/: emissions.csv  emissions.csv.bak
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CAPACITY_PLAN.md  DEPLOYMENT.md  DEPRECATION_POLICY.md  FULL_CODEBASE_AUDIT.md  LOGIC_AND_PERFORMANCE_AUDIT.md  ROLLBACK_PLAN.md  SOC2_CONTROLS.md  WORKFLOW_DEMO.md  disaster_recovery.md  (+5 more)
(+1986 files in other folders)
