[tool.poetry]
name = "cloudsentinel-ai"
version = "0.1.0"
description = "Autonomous FinOps Guardian"
authors = ["Dare AbdulGoniyy adelekedare2012@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic-settings = "^2.12.0"
structlog = "^25.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
