[tool.poetry]
name = "cloudsentinel-ai"
version = "0.1.0"
description = "Autonomous FinOps Guardian"
authors = ["Dare AbdulGoniyy <adelekedare2012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic-settings = "^2.12.0"
structlog = "^25.5.0"
boto3 = "^1.42.21"
boto3-stubs = {extras = ["essential"], version = "^1.42.21"}
types-aiobotocore = {extras = ["ce"], version = "^3.1.0"}
langchain = "^1.2.0"
langchain-openai = "^1.1.6"
langchain-anthropic = "^1.3.1"
langchain-google-genai = "^4.1.3"
langchain-groq = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "strict"
